--- a/tp3ML.ipynb
+++ b/tp3ML.ipynb
@@ -320,7 +320,7 @@
   {
    "cell_type": "raw",
    "source": [
-    "Echantiollanage améloré des données  avec une fonction  Train Test Split customisée"
+    "Echantilloanage améloré des données  avec une fonction  Train Test Split customisée"
    ],
    "metadata": {
     "collapsed": false
@@ -752,8 +752,7 @@
       "pour folds=  3 = 0.02666666666666669\n",
       "pour folds=  5 = 0.033333333333333326\n",
       "pour folds=  8 = 0.03289473684210528\n",
-      "pour folds=  10 = 0.033333333333333326\n",
-      "\n"
+      "pour folds=  10 = 0.033333333333333326\n"
      ]
     }
    ],
