--- a/tp3ML.ipynb
+++ b/tp3ML.ipynb
@@ -527,7 +527,7 @@
   {
    "cell_type": "raw",
    "source": [
-    "Utilisation d'une méthode prédéfinie avec la méthode   Train Test Split"
+    "Utilisation d'une fonction prédéfinie avec la méthode   Train Test Split"
    ],
    "metadata": {
     "collapsed": false
